@@ -342,6 +342,7 @@ Fixes:
      - Fix alpha set function not clear sync counter.
      - Fix selection parser to not overrun buffer read by using longs on 64bit.
      - Fix x11 selection trailing nul byte in text.
+     - Fix BadMatch errors in ecore_x_image_get when requested size was larger than XImage size
     * Ecore_Wayland:
      - Fix return type of function ecore_wl_outputs_get().
     * Ecore_Input_Evas:
